--- a/about/index.html
+++ b/about/index.html
@@ -189,7 +189,7 @@ I share photos in daily life.</li>
 <li>YouTube Teaching Channel: <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UCe_3sYrCsZyo9WAGd0s6vRQ">Coding Neutrino—微中子的程式教學</a>.<br>
 I teach computer science and programming.</li>
 <li>YouTube Life Channel: <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UCAcBvq5pQvy7RXkFq5a9LGA">Neutrino Life 微中子的生活頻道</a></li>
-<li>Email: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a>, <a href="mailto:acliu@cs.nctu.edu.tw">acliu@cs.nctu.edu.tw</a></li>
+<li>Email: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a>, <a href="mailto:acliu@cs.nycu.edu.tw">acliu@cs.nycu.edu.tw</a></li>
 </ul>
 <hr>
 <iframe
