deploy: b13287007ad7d5397baab05e32b9c9d79da00087

--- a/navigation/index.html
+++ b/navigation/index.html
@@ -182,8 +182,10 @@
 </ol>
 <h2 id="國外生活"><a class="header-anchor" href="#國外生活">¶ </a>國外生活</h2>
 <ol>
-<li><strong><a href="/tags/Italy/">義大利交換期間</a></strong></li>
-<li><strong><a href="/tags/%E6%97%A5%E6%9C%AC/">日本工作期間</a></strong></li>
+<li><strong><a href="/tags/Italy/">義大利交換期間</a></strong><br>
+記錄了 2021/2022 在米蘭交換期間的心得</li>
+<li><strong><a href="/tags/%E6%97%A5%E6%9C%AC/">日本工作期間</a></strong><br>
+記錄了 2022 開始去日本東京工作的各種心得</li>
 </ol>
 <h2 id="系列文"><a class="header-anchor" href="#系列文">¶ </a>系列文</h2>
 <ol>
