--- a/message/index.html
+++ b/message/index.html
@@ -174,6 +174,7 @@
     <hr class="hr-color">
 
     <div id="comments"></div>
+    <link rel="stylesheet" href="https://unpkg.com/octomments/build/ocs-ui.min.css" />
     <script src="https://unpkg.com/octomments/build/ocs.min.js"></script>
     <script>
         Octomments({
