deploy: 58a0b23aeaacbc7db1d1b95e0e15e62ded222767

--- a/about/index.html
+++ b/about/index.html
@@ -180,13 +180,12 @@ There are plenty of code.</li>
 This is for head hunters.</li>
 <li>Facebook Page: <a target="_blank" rel="noopener" href="https://www.facebook.com/CodingNeutrino/">微中子 @tigercosmos</a>.<br>
 I share information, news, article about technology and computer science on Facebook.</li>
-<li>Twitter: <a target="_blank" rel="noopener" href="https://twitter.com/tigercosmos">@tigercosmos</a>.<br>
-Usually just reply others tweets.</li>
-<li>Instagram: <a target="_blank" rel="noopener" href="https://www.instagram.com/liu_an_chi/">@liu_an_chi</a>.<br>
-I share photos in daily life.</li>
+<li>Google Scholar: <a target="_blank" rel="noopener" href="https://scholar.google.com/citations?hl=en&amp;user=i06mZ0sAAAAJ&amp;view_op=list_works">An-Chi Liu</a></li>
 <li>YouTube Teaching Channel: <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UCe_3sYrCsZyo9WAGd0s6vRQ">Coding Neutrino—微中子的程式教學</a>.<br>
 I teach computer science and programming.</li>
 <li>YouTube Life Channel: <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UCAcBvq5pQvy7RXkFq5a9LGA">Neutrino Life 微中子的生活頻道</a></li>
+<li>Twitter: <a target="_blank" rel="noopener" href="https://twitter.com/tigercosmos">@tigercosmos</a>.<br>
+Usually just reply others tweets.</li>
 <li>Email: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a>, <a href="mailto:acliu@cs.nycu.edu.tw">acliu@cs.nycu.edu.tw</a></li>
 </ul>
 <hr>
