deploy: 7154c7240cba3e05b5941fee4fc9ee2911739fe4

--- a/about/index.html
+++ b/about/index.html
@@ -188,6 +188,9 @@ I teach computer science and programming.</li>
 Usually just reply others tweets.</li>
 <li>Email: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a>, <a href="mailto:acliu@cs.nycu.edu.tw">acliu@cs.nycu.edu.tw</a></li>
 </ul>
+<blockquote>
+<p>專案合作、顧問諮詢、演講邀約請直接 Email 洽談</p>
+</blockquote>
 <hr>
 <iframe
   allowtransparency="true" frameborder="0" height="500" scrolling="no"
