--- a/source/books/index.html
+++ b/source/books/index.html
@@ -1,6 +1,27 @@
 ---
-title: Books
-layout: blank
+title: 書籍專區
+layout: books
 ---
 
-新書 2025 年一月上市，敬請期待。
+<div class="book_list">
+    <div class="book_container">
+        <h2 class="book_title_h2">
+            <span class="book_title_left">程式設計原來</span>
+            <span class="book_title_right">不只有寫 CODE！</span>
+        </h2>
+        <h3 class="book_title_h3">銜接學校與職場的五堂軟體開發實習課</h3>
+        <p class="author">劉安齊 Liu, An-Chi 著</p>
+        <img class="book_image" src="https://raw.githubusercontent.com/tigercosmos/beyond-just-coding-book/refs/heads/master/book_picture.jpg" width="50%" alt="「程式設計原來不只有寫 CODE！銜接學校與職場的五堂軟體開發實習課」書籍封面">
+        <div class="book_summary">
+            <div class="slogan">成為優秀的程式設計師<br>可以從基本的資工素養開始培養起</div>
+            <p>
+                一個資工系所畢業的學生該具備什麼技能？一個半路出家的工程師需要具備什麼能力？
+                除了基礎程式設計與專業科目知識之外，本書透過情境式的故事帶領讀者了解成為優秀
+                程式設計師所必備的技能與素養，原來程式設計不只有寫 CODE！
+            </p>
+        </div>
+        <div class="show_more">
+            <a href="/books/beyond-just-coding-book.html">詳細資訊</a>
+        </div>
+    </div>
+<div class="book_list">
