--- a/source/books/index.html
+++ b/source/books/index.html
@@ -1,13 +1,16 @@
 ---
 title: 書籍專區
 layout: books
+des: "劉安齊著作的書籍專區"
 ---
 
 <div class="book_list">
     <div class="book_container">
         <h2 class="book_title_h2">
-            <span class="book_title_left">程式設計原來</span>
-            <span class="book_title_right">不只有寫 CODE！</span>
+            <a href="/books/beyond-just-coding-book.html"</a>
+                <span class="book_title_left">程式設計原來</span>
+                <span class="book_title_right">不只有寫 CODE！</span>
+            </a>
         </h2>
         <h3 class="book_title_h3">銜接學校與職場的五堂軟體開發實習課</h3>
         <p class="author">劉安齊 Liu, An-Chi 著</p>
