--- a/draft/computation-photography.html
+++ b/draft/computation-photography.html
@@ -4,7 +4,7 @@
     <!-- hexo-inject:begin --><!-- hexo-inject:end --><meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
     <meta name="keywords"
-        content="," />
+        content="computational photography," />
     <meta name="description"
         content="計算攝影學 (Computational Photography) 簡介" />
     <title>Neutrino&#39;s Blog: 計算攝影學 (Computational Photography) 簡介 </title>
