deploy: 2386b2b11564d4c0c440b06d3a1cdef29cbf8f4f

--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -271,6 +271,8 @@
     }
     #previewDialog {
       width: 60%;
+      height: 85%;
+      max-height: min-content;
       display: none;
       position: fixed;
       top: 50%;
