--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -329,6 +329,7 @@
             <li><strong>購買連結：</strong> <a target="_blank" rel="noopener" href="https://www.tenlong.com.tw/products/9786264140348">天瓏書局</a> （最便宜） </li>
             <li><strong>海外購買連結：</strong> <a target="_blank" rel="noopener" href="https://www.books.com.tw/products/0011008985">博客來</a></li>
             <li><strong>電子書：</strong> 預計 2025/3/31 上市</li>
+            <li><strong>勘誤表：</strong> <a href="#勘誤表">連結</a></li>
         </ul>
     </div>
 </div>
@@ -563,6 +564,18 @@
 </li>
 <li>結語</li>
 </ul>
+<h2 id="勘誤表"><a class="header-anchor" href="#勘誤表">¶ </a>勘誤表</h2>
+<p>雖然本書經過多次校稿，但仍難免有錯誤，若讀者發現任何錯誤，歡迎來信指正，謝謝！</p>
+<p>以下堪誤內容針對不同版本用代號做區分是否適用：</p>
+<ul>
+<li>第一版第一刷：E1P1</li>
+<li>第一版第二刷：E1P2</li>
+</ul>
+<p>堪誤表如下：</p>
+<ul>
+<li>p35，圖 1-10 說明文字中應更正為「Stack Overflow 2023 問卷調查不同 IDE 的使用比例」（E1P1）</li>
+<li>p95，第 7 行，「stdout（fd=0）」應更正為「stdout（fd=1）」 （E1P1、E1P2）</li>
+</ul>
 
         </div>
     
@@ -602,7 +615,7 @@
 <ol class="toc"><li class="toc-item toc-level-2"><a class="toc-link"><span class="toc-text">
     程式設計原來
     不只有寫 CODE！
-</span></a><ol class="toc-child"><li class="toc-item toc-level-3"><a class="toc-link"><span class="toc-text">銜接學校與職場的五堂軟體開發實習課</span></a></li></ol></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%B0%A1%E4%BB%8B"><span class="toc-text">簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%B0%88%E6%A5%AD%E6%8E%A8%E8%96%A6"><span class="toc-text">專業推薦</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%85%A7%E5%AE%B9%E7%B0%A1%E4%BB%8B"><span class="toc-text">內容簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E6%9B%B8%E6%9C%AC%E7%89%B9%E8%89%B2"><span class="toc-text">書本特色</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E9%81%A9%E5%90%88%E5%B0%8D%E8%B1%A1"><span class="toc-text">適合對象</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%9B%AE%E9%8C%84"><span class="toc-text">目錄</span></a></li></ol>
+</span></a><ol class="toc-child"><li class="toc-item toc-level-3"><a class="toc-link"><span class="toc-text">銜接學校與職場的五堂軟體開發實習課</span></a></li></ol></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%B0%A1%E4%BB%8B"><span class="toc-text">簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%B0%88%E6%A5%AD%E6%8E%A8%E8%96%A6"><span class="toc-text">專業推薦</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%85%A7%E5%AE%B9%E7%B0%A1%E4%BB%8B"><span class="toc-text">內容簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E6%9B%B8%E6%9C%AC%E7%89%B9%E8%89%B2"><span class="toc-text">書本特色</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E9%81%A9%E5%90%88%E5%B0%8D%E8%B1%A1"><span class="toc-text">適合對象</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%9B%AE%E9%8C%84"><span class="toc-text">目錄</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%8B%98%E8%AA%A4%E8%A1%A8"><span class="toc-text">勘誤表</span></a></li></ol>
 </div>
                 </section>
             
