--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -573,9 +573,10 @@
 </ul>
 <p>堪誤表如下：</p>
 <ul>
-<li>p35，圖 1-10 說明文字中應更正為「Stack Overflow 2023 問卷調查不同 IDE 的使用比例」（E1P1）</li>
+<li>p35，圖 1-10 說明文字中應更正為「Stack Overflow 2023 問卷調查不同 IDE 的使用比例」。（E1P1）</li>
 <li>p48，「Go to Defination」更正為「Go to Definition」。（E1P1、E1P2）</li>
-<li>p95，第 7 行，「stdout（fd=0）」應更正為「stdout（fd=1）」 （E1P1、E1P2）</li>
+<li>p95，第 7 行，「stdout（fd=0）」應更正為「stdout（fd=1）」。（E1P1、E1P2）</li>
+<li>p123，第二個程式碼區塊中的「cat .ssh/authorized_keys」更正為「cat ~/.ssh/authorized_keys」。（E1P1、E1P2）</li>
 </ul>
 
         </div>
