--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -573,6 +573,8 @@
 </ul>
 <p>堪誤表如下：</p>
 <ul>
+<li>pxiv，「5.2」標題更正為「持續整合和持續部署（CI/CD）」（E1P1、E1P2）</li>
+<li>p29，〈Xcode〉小節中，第 6 行更正為「各種iOS 裝置上的應用程式」，第 11 行更正為「開發者發布應用程式至 App Store」。（E1P1、E1P2）</li>
 <li>p35，圖 1-10 說明文字中應更正為「Stack Overflow 2023 問卷調查不同 IDE 的使用比例」。（E1P1）</li>
 <li>p48，「Go to Defination」更正為「Go to Definition」。（E1P1、E1P2）</li>
 <li>p95，第 7 行，「stdout（fd=0）」應更正為「stdout（fd=1）」。（E1P1、E1P2）</li>
