--- a/about/index.html
+++ b/about/index.html
@@ -195,7 +195,7 @@
 <li><strong>YouTube Life Channel</strong>: <a target="_blank" rel="noopener" href="https://www.youtube.com/channel/UCAcBvq5pQvy7RXkFq5a9LGA">Neutrino Life 微中子的生活頻道</a></li>
 <li><strong>Twitter</strong>: <a target="_blank" rel="noopener" href="https://twitter.com/tigercosmos">@tigercosmos</a>.</li>
 <li><strong>Threads</strong>: <a target="_blank" rel="noopener" href="https://www.threads.net/@liu_an_chi">@liu_an_chi</a></li>
-<li><strong>Email</strong>: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a>, <a href="mailto:acliu@cs.nycu.edu.tw">acliu@cs.nycu.edu.tw</a></li>
+<li><strong>Email</strong>: <a href="mailto:phy.tiger@gmail.com">phy.tiger@gmail.com</a></li>
 </ul>
 <blockquote>
 <p>專案合作、顧問諮詢、演講邀約請直接 Email 洽談</p>
