deploy: e190b5a4512abed737e08f6ffc277ffbf6506563

--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -578,7 +578,16 @@
 <li>p35，圖 1-10 說明文字中應更正為「Stack Overflow 2023 問卷調查不同 IDE 的使用比例」。（E1P1）</li>
 <li>p48，「Go to Defination」更正為「Go to Definition」。（E1P1、E1P2）</li>
 <li>p95，第 7 行，「stdout（fd=0）」應更正為「stdout（fd=1）」。（E1P1、E1P2）</li>
+<li>p114，<code>route</code> 執行範例程式區塊，第二行「255.255.240.0」更正為「255.255.255.0」。（E1P1、E1P2）</li>
+<li>p114，「eno5」全部更正為「eth5」。（E1P1、E1P2）</li>
 <li>p123，第二個程式碼區塊中的「cat .ssh/authorized_keys」更正為「cat ~/.ssh/authorized_keys」。（E1P1、E1P2）</li>
+<li>p127，（非錯誤調整）下方程式碼區塊「[sudo] password for mujin:」 更新為 「[sudo] password for acliu:」。（E1P1、E1P2）</li>
+<li>p158，「確認函式傳遞鏈」段落中，「或者反過來看誰呼叫切呼點」的「切呼點」更正為「切入點」。（E1P1、E1P2）</li>
+</ul>
+<h2 id="補充內容"><a class="header-anchor" href="#補充內容">¶ </a>補充內容</h2>
+<p>不定期更新書籍的補充內容，作為第二版的靈感來源。</p>
+<ul>
+<li>git 章節小練習中可以加入 <code>git commit --amend</code> 和 <code>git stash</code>。</li>
 </ul>
 
         </div>
@@ -615,7 +624,7 @@
 <ol class="toc"><li class="toc-item toc-level-2"><a class="toc-link"><span class="toc-text">
     程式設計原來
     不只有寫 CODE！
-</span></a><ol class="toc-child"><li class="toc-item toc-level-3"><a class="toc-link"><span class="toc-text">銜接學校與職場的五堂軟體開發實習課</span></a></li></ol></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%B0%A1%E4%BB%8B"><span class="toc-text">簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%B0%88%E6%A5%AD%E6%8E%A8%E8%96%A6"><span class="toc-text">專業推薦</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%85%A7%E5%AE%B9%E7%B0%A1%E4%BB%8B"><span class="toc-text">內容簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E6%9B%B8%E6%9C%AC%E7%89%B9%E8%89%B2"><span class="toc-text">書本特色</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E9%81%A9%E5%90%88%E5%B0%8D%E8%B1%A1"><span class="toc-text">適合對象</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%9B%AE%E9%8C%84"><span class="toc-text">目錄</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%8B%98%E8%AA%A4%E8%A1%A8"><span class="toc-text">勘誤表</span></a></li></ol>
+</span></a><ol class="toc-child"><li class="toc-item toc-level-3"><a class="toc-link"><span class="toc-text">銜接學校與職場的五堂軟體開發實習課</span></a></li></ol></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%B0%A1%E4%BB%8B"><span class="toc-text">簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%B0%88%E6%A5%AD%E6%8E%A8%E8%96%A6"><span class="toc-text">專業推薦</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%85%A7%E5%AE%B9%E7%B0%A1%E4%BB%8B"><span class="toc-text">內容簡介</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E6%9B%B8%E6%9C%AC%E7%89%B9%E8%89%B2"><span class="toc-text">書本特色</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E9%81%A9%E5%90%88%E5%B0%8D%E8%B1%A1"><span class="toc-text">適合對象</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E7%9B%AE%E9%8C%84"><span class="toc-text">目錄</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E5%8B%98%E8%AA%A4%E8%A1%A8"><span class="toc-text">勘誤表</span></a></li><li class="toc-item toc-level-2"><a class="toc-link" href="#%E8%A3%9C%E5%85%85%E5%85%A7%E5%AE%B9"><span class="toc-text">補充內容</span></a></li></ol>
 </div>
                 </section>
             
