deploy: cdb4645a5e035654649138794c9f31953ec444f6

--- a/books/beyond-just-coding-book.html
+++ b/books/beyond-just-coding-book.html
@@ -586,6 +586,7 @@
 <li>p153，「例如我們從指看根目錄的檔案和目錄」，筆誤「指」為「只」。（E1P1、E1P2、E1P3）</li>
 <li>p156，「在做從上而下閱讀時兩者使用方法概念相同」，「從上而下」應該為「從下而上」。（E1P1、E1P2、E1P3）</li>
 <li>p158，「確認函式傳遞鏈」段落中，「或者反過來看誰呼叫切呼點」的「切呼點」更正為「切入點」。（E1P1、E1P2、E1P3）</li>
+<li>p188，倒數第二行「行別宣告」更正為「型別宣告」。（E1P1、E1P2、E1P3）</li>
 </ul>
 <h2 id="補充內容"><a class="header-anchor" href="#補充內容">¶ </a>補充內容</h2>
 <p>不定期更新書籍的補充內容，作為第二版的靈感來源。</p>
